--- a/styles/Landing.css
+++ b/styles/Landing.css
@@ -1,6 +1,18 @@
-.banner{
-  background-image: url('/asset/img/background.png');
-  height: 740px;
-  background-size: 'cover';
-  background-position: center;
+.bg{
+  position: 'fixed';
+  top: '0%';
+  left: '0%';
+  width: '100%';
+  height: '100%';
+}
+
+.bg-img {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  min-width: 100%;
+  min-height: -20%;
+  z-index:-1;
 }
